2006-04-23  Titus Brown  <t@issola.caltech.edu>

	* Updated 'problems.txt' again with a Windows-specific 'tidy'
	  problem.  (aledain)

	* Refactored '_all_the_same...' code by moving it into utils.py.

	* browser.get_form() now checks for exact match to form ID.
	  (Uy Do)

	* browser.get_form_field() now checks for exact match to control ID
	  (Uy Do)

	* Updated ClientCookie to latest svn.

	* Added another weird form parsing error: </br> problems in forms.
	  (David Hancock)

	* Verified issue with ParseErrors caused by INPUTs in the wrong
	  place.  Put in test-broken-html.  Cannot fix easily... <sigh>
	  (Tomi Hautakoski)

	* Fixed wsgi_intercept/write_fn issue.

2006-04-13  Titus Brown  <t@issola.caltech.edu>

	* Changed 'save_html' to default to deriving the filename from the
	  URL (Tristan De Buysscher).

2006-03-30  Titus Brown  <t@issola.caltech.edu>

	* Added redirect_error, reset_error to commands.py, and
	  added function 'twill.set_errout'.

	* Added '-n', '--never-fail' option to 'twill-sh'.

	* Fixed a problem with ClientForm.AmbiguityError being raised in
	  bad places.

	* Updated ClientForm to latest.

2006-03-26  Titus Brown  <t@issola.caltech.edu>

	* Updated dns_check with Bob Halley's suggestions.

	* Added docs & (fragile) tests to the dns_check extension module.

	* Added dns_check.py extension module.  No docs/tests yet.

2006-03-25  Titus Brown  <t@issola.caltech.edu>

	* Allowed failure to import setuptools in setup.py.

2006-03-23  Titus Brown  <t@issola.caltech.edu>

	* Major twill/shell.py patch to allow for dynamic addition of 
	  methods to shell objects.

	* RELEASE 0.8.4.

	* Improved extension module docstrings.

	* Added better printout when 'extend_with' is used.

	* Added argparse extension module (Michele Simionato).

2006-03-22  Titus Brown  <t@issola.caltech.edu>

	* Changed __match__ to listen to subgroups. (Leonardo Santagada).

	* Added Stephen Thorne's fix for multiple checkboxes with the same