@@ -121,12 +121,13 @@ argparse
 ~~~~~~~~
 
 The 'argparse' extension module contains one function, 'get_args'.  'get_args'
-loads all of the command-line arguments into variables, e.g. ::
+loads all of the post-scriptfile command-line arguments into variables, e.g. ::
 
-   % ./twill-sh script1 script2 script3
+   % ./twill-sh script1 script2 script3 -- arg1 arg2 arg3
    ...
    >> extend_with argparse
-   >> echo $arg1
+   >> get_args
+   >> echo $arg1 $args $arg3
 
 dns_check
 ~~~~~~~~~
